Made app display the game

--- a/src/app/components/mage-arena/mage-arena.component.html
+++ b/src/app/components/mage-arena/mage-arena.component.html
@@ -1,1 +1,1 @@
-<div class="mage-arena-container" id="mage-arena-container"></div>
+<canvas class="mage-arena-container" id="mage-arena-container"></canvas>
